deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klimatsearch
  labels:
    app: klimatsearch
spec:
  selector:
    app: klimatsearch
  ports:
    - name: http
      port: 8080
      targetPort: http
